styling changes start

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	body{
 		/*background-color: #7f8c8d;*/
 		font-family: 'Open Sans', sans-serif;
+		/*background-color: #ecf0f1;*/
 	}
 	h1{
 		font-family: 'Open Sans', sans-serif;
@@ -21,7 +22,7 @@
 	}
 	svg{
 		background-color: white;
-		border: 1px solid #95a5a6;
+		border: 1px solid #ecf0f1;
 	}
 	hr{
 		border: 0;
@@ -33,13 +34,13 @@
 		position: fixed;
 		width: 1000px;
 		left: 460px;
-		top: 46px;
+		top: 100px;
 	}
 	.container{
-		margin: 90px 10px 160px;
+		margin: 0 10px 0;
 		max-width: 380px;
-		padding: 10px 40px 20px;
-		border: 1px solid #ecf0f1;
+		padding: 100px 40px 180px;
+		border-right: 1px solid #ecf0f1;
 		float: left;
 	}
 	.h_spacer{
@@ -106,15 +107,15 @@
 		<div id="panel1">
 			<h2 class="header_positive">Correlation</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
+		</div>
 		<div class="v_spacer"></div>
 
 		<div id="panel2">
-		<h2 class="header_negative">Inverse Correlation</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h2 class="header_negative">Inverse Correlation</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 
-		<div class="v_spacer"></div>
+		<!-- <div class="v_spacer"></div> -->
 
 		<!-- <h2 id="panel3" class="header_other">Other Interesting Points</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
@@ -124,7 +125,7 @@
 	</div> -->
 
 	<div class="graphs">
-		<svg id="legend"/>
+		<!-- <svg id="legend"/> -->
 		<svg id="line-chart"/>
 		<!-- <svg id="correlation-chart"/> -->
 		<svg id="bar-chart"/>
