--- a/index.html
+++ b/index.html
@@ -855,9 +855,15 @@ function generateSelectionChart(brands){
 					.attr("y", heightScale(i)+4)
 					.style("font-size",8)
 					.style("text-shadow","0px 0px 5px rgba(255, 255, 255, 1)")
-					.text(d)
+					.text(d);
+		barChart.append('line')
+					.attr('x1', 0)
+					.attr('y1', heightScale(i))
+					.attr('x2', widthBC)
+					.attr('y2', heightScale(i))
+					.attr("class","barOverlay")
 					.attr("onmouseover","highlight('"+d+"')")
-					.attr("onmouseout", "dehighlight()")
+					.attr("onmouseout", "dehighlight()");
 	});
 
 	
